fixed icon disappearing, mobile spacing

--- a/main.css
+++ b/main.css
@@ -1,10 +1,16 @@
+
 .aboutMeHolder {
   display:block;
 }
+.navbar-nav{
 
+  height:100%;
+  justify-content: space-around;
+}
 
   .frontPageHolder {
     margin-top:1em;
+    display: block;
   }
 
   .frontPageInnerDiv {
@@ -32,7 +38,6 @@
 
   .container {
     height:700px;
-    margin-bottom:2em;
   }
   .skillsIcons{
     height:48px;
@@ -46,7 +51,6 @@
     max-width:100%;
     margin:0 auto;
     justify-content: center;
-
   }
 
   .iconHolder {
@@ -80,7 +84,8 @@
     margin-top: 1.5em;
   }
   #skillContainer {
-    height:1000px;
+    height:1100px;
+    margin-bottom: 2.5em;
   }
 
   .projectCardHolder {
@@ -91,7 +96,7 @@
   }
   .card {
     margin:2em 0;
-    height:600px;
+    height:700px;
     text-align: center;
     width:80%;
 
@@ -103,8 +108,9 @@
   }
 
   .card-text {
-    height:160px;
+
     font-size: 1.1em;
+    height:250px;
   }
   .card-img-top {
     height:180px;
@@ -178,13 +184,28 @@
 .aboutMeLi {
   font-size: 1.15em;
 }
+
+
+  .navbar-toggler-icon {
+        background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(255,255,255, 1)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
+}
+
+
 /* // Medium devices (tablets, 768px and up) */
 @media (min-width: 768px) {
-  .aboutMeHolder {
+  /* .aboutMeHolder {
 
-  }
-
-
+  } */
+  /* .collapse {
+    display: contents !important;
+  } */
+.navbar-nav {
+  display: flex;
+  flex-direction: row;
+}
+.nav-item {
+  margin:0 20px;
+}
   .frontPageHolder {
     display: flex;
     flex-direction: row;
